--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <audio src="anigrand.mp3" autoplay loop hidden></audio>
   <!-- Background -->
   <div class="night"></div>
 
