--- a/flower.html
+++ b/flower.html
@@ -13,6 +13,7 @@
 </head>
 
 <body class="not-loaded">
+  <audio src="anigrand.mp3" autoplay loop hidden></audio>
   <!-- Background -->
   <div class="night"></div>
 
